syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "ci/proto/storage/common.proto";

message AggregateStatistics {
    AggregateTechnicalStatistics technical = 1;
    AggregateMainStatistics main = 2;
    AggregateExtendedStatistics extended = 3;
    repeated Metric metrics = 4;
}

message ChunkAggregateStatistics {
    map<string, ToolchainStatistics> toolchains = 1;
}

message ToolchainStatistics {
    AggregateMainStatistics main = 1;
    AggregateExtendedStatistics extended = 2;
}

message AggregateTechnicalStatistics {
    double machineHours = 1;
    uint32 totalNumberOfNodes = 2;
    double cacheHit = 3;
}

message AggregateMainStatistics {
    StatisticsGroup total = 1;

    StatisticsGroup configure = 11;
    StatisticsGroup build = 12;
    StatisticsGroup style = 13;

    StatisticsGroup small_tests = 21;
    StatisticsGroup medium_tests = 22;
    StatisticsGroup large_tests = 23;

    StatisticsGroup te_tests = 31;
    StatisticsGroup native_builds = 32;
}

message AggregateExtendedStatistics {
    ExtendedStatisticsGroup added = 1;
    ExtendedStatisticsGroup deleted = 2;

    ExtendedStatisticsGroup flaky = 3;
    ExtendedStatisticsGroup muted = 4;
    ExtendedStatisticsGroup timeout = 5;
    ExtendedStatisticsGroup internal = 6;
    ExtendedStatisticsGroup external = 7;
}

message StatisticsGroup {
    int32 total = 1;

    int32 passed = 10;
    int32 passedAdded = 11;

    int32 failed = 20;
    int32 failedAdded = 21;
    int32 failedInStrongMode = 22;

    int32 failedByDeps = 30;
    int32 failedByDepsAdded = 31;
    int32 passedByDepsAdded = 32;

    int32 skipped = 40;
    int32 skippedAdded = 41;
}

message ExtendedStatisticsGroup {
    int32 total = 1;
    int32 passedAdded = 20;
    int32 failedAdded = 30;
}
