syntax = "proto3";

package ci.proto.storage;

option java_package = "ru.yandex.ci.storage.core";

import "ci/proto/storage/check_iteration.proto";
import "ci/proto/storage/check_task.proto";
import "ci/proto/storage/task_messages.proto";
import "ci/proto/storage/common.proto";
import "google/protobuf/empty.proto";

message ChunkMessage {
    ChunkId chunk_id = 1;

    oneof message {
        ShardResultMessage result = 10;
        FinishChunk finish = 11;
    }
}

message ShardInMessage {
    MessageMeta meta = 1;

    oneof message {
        ChunkMessage chunk = 10;
    }
}


message ShardResultMessage {
    FullTaskId full_task_id = 1;
    int32 partition = 2;
    AutocheckTestResults autocheck_test_results = 4;
}

message FinishChunk {
    IterationId iteration_id = 1;
    ChunkAggregateState state = 2;
}
